fixed filter by search. added alignment buttons. improved separation of concerns

--- a/styles/basics/base.css
+++ b/styles/basics/base.css
@@ -12,6 +12,11 @@ body {
     background-color: var(--clrPrimary-1);
 }
 
+body.rtl {
+    direction: rtl;
+    text-align: right;
+}
+
 img {
     width: 100%;
 }
@@ -36,6 +41,19 @@ a {
 
 .btn:hover {
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
+}
+
+select {
+    position: relative;
+    font-size: 1rem;
+    border: none;
+    border-radius: 10px;
+    padding: 15px 20px;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: var(--clrPrimary-2);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s;
 }
 
 input[type="color"] {
