--- a/styles/components/meme-editor.css
+++ b/styles/components/meme-editor.css
@@ -26,3 +26,13 @@
 .meme-editor .remove-line{
     background-color: rgb(255, 47, 47);
 }
+
+.meme-editor .edit-buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 15px;
+}
+
+.meme-editor select {
+    grid-area: 2 / span 3;
+}
